<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.HelpScreenActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="282dp"
        android:layout_height="41dp"
        android:layout_below="@+id/button_ic"
        android:layout_marginTop="41dp"
        android:text="@string/other_help"
        android:textAlignment="textStart"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="282dp"
        android:layout_height="41dp"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="41dp"
        android:text="@string/ongoing_loan_appication"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_ic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="26dp"
        android:text="@string/instant_cash"
        android:textAlignment="textStart" />

    <Button
        android:id="@+id/button_oi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="26dp"
        android:text="@string/other_issues"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/button_ti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_oi"
        android:layout_marginTop="20dp"
        android:text="@string/technical_issues"
        android:textAlignment="viewStart" />
</RelativeLayout>